import React from 'react';
import {shallow} from 'enzyme';
import {GifExpertApp} from '../GifExpertApp';

describe('Pruebas en gifExpertApp', () => {
   
    test('debe mostrarse correctamente', () => {
        const wrapper=shallow(<GifExpertApp/>);
        expect(wrapper).toMatchSnapshot();
    });

    test('debe de mostrar una lista de categorias', () => {
        const categories=['The 100', 'Arrow'];
        const wrapper=shallow(<GifExpertApp defaultCategories={categories}/>);
        expect(wrapper).toMatchSnapshot();
        expect(wrapper.find('GifGrid').length).toBe(categories.length);
    })
    
    
})
